--- a/data.yml
+++ b/data.yml
@@ -11,8 +11,8 @@ locations:
         database: COALESCE_SAMPLE_DATABASE
         schema: TPCH_SF001
       "73":
-        database: DEV_EVAN_V_5_5
-        schema: PROD_RAW
+        database: EVAN_DEV_EDW
+        schema: DEV_RAW
   STG:
     mappingDefinitions:
       "62":
@@ -22,8 +22,8 @@ locations:
         database: NICK_EDW
         schema: STG_DEV
       "73":
-        database: DEV_EVAN_V_5_5
-        schema: PROD_STAGING
+        database: EVAN_DEV_EDW
+        schema: DEV_STAGING
   TEST:
     mappingDefinitions:
       "62":
@@ -33,8 +33,8 @@ locations:
         database: NOLAN_DB
         schema: STAGE
       "73":
-        database: DEV_EVAN_V_5_5
-        schema: PROD_DATA_MART
+        database: EVAN_DEV_EDW
+        schema: INFORMATION_SCHEMA
 macros: {}
 packages: {}
 projects: {}
