--- a/nodes/STG-STG_CUSTOMER.yml
+++ b/nodes/STG-STG_CUSTOMER.yml
@@ -11,7 +11,7 @@ steps:
       deployEnabled: true
       description: Customer data as defined by TPC-H
       isMultisource: false
-      locationName: TEST
+      locationName: STG
       materializationType: table
       metadata:
         appliedNodeTests: []
